# HW_2_7

./: alembic.ini  connect_db.py  filling_db.py  main.py  models.py  my_select.py  pyproject.toml
alembic/versions/: 373016d50401_init.py
