[tool.poetry]
name = "hw-2-7"
version = "0.1.0"
description = "my_home_work, lesson_7"
authors = ["Omelchenko-climber <omelchenko230783@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
faker = "^24.8.0"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
